--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -58,6 +58,10 @@
   #new_search_form {
     width: 435px;
 
+    .tt-dropdown-menu {
+      margin-right: 0;
+    }
+
     #search_form_query,
     #search_form_search_location {
       max-width: 165px;
