--- a/app/assets/stylesheets/modules/_popup-content.scss
+++ b/app/assets/stylesheets/modules/_popup-content.scss
@@ -17,7 +17,7 @@
     margin-top: 0;
   }
 
-  button[class$="overlay_close"] {
+  button[class$="overlay_close"],[class$="beta_banner_close"] {
     position: absolute;
     top: -10px;
     right: -10px;
