--- a/app/views/layouts/partials/_header.html.slim
+++ b/app/views/layouts/partials/_header.html.slim
@@ -5,4 +5,5 @@ javascript:
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-59626864-1', 'auto');
+  ga('set', 'anonymizeIp', true);
   ga('send', 'pageview');
