--- a/app/views/offers/index/_categories_nest.html.slim
+++ b/app/views/offers/index/_categories_nest.html.slim
@@ -4,12 +4,10 @@
       - name = category.name
       - active_class = search_cache.category_in_focus?(name) ? 'active' : ''
       li.Categories__listitem class=active_class
-        - if facets[name]
-          = link_to offers_path(search_form: search_cache.focus(name)),
-                    class: 'btn' do
-            = name
-            = ' (' + (facets[name] ? facets[name].to_s : '0') + ')'
-        - else
-          = "#{name} (0)"
+        = link_to offers_path(search_form: search_cache.focus(name)),
+                  class: 'btn' do
+          = name
+          /= ' (' + (facets[name] ? facets[name].to_s : '0') + ')'
+
         = render 'offers/index/categories_nest', set: children, facets: facets,
                                                  search_cache: search_cache
