--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -7,9 +7,87 @@
 .Categories {
   @extend %layout-col-29;
   margin-right: 2.5%;
+  margin-bottom: 40px;
 }
 
 .Categories__headline {
   @extend %roboto_regular;
   font-weight: 400;
 }
+
+// General styling
+.Categories__listitem {
+  margin-top: 5px;
+
+  a {
+    text-decoration: none;
+  }
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+.Categories__list .Categories__list {
+  padding-left: 30px;
+}
+
+// List visibility and hasChild-indicator
+.Categories__listitem {
+
+  &,
+  li,
+  li li {
+    list-style: disc;
+  }
+
+  > .Categories__list {
+    display: none;
+  }
+
+  &.active {
+    > a {
+      @extend %roboto_bold;
+    }
+
+    > .Categories__list {
+      display: block;
+    }
+  }
+}
+
+// First level item
+.Categories > .Categories__list > .Categories__listitem {
+  list-style: none;
+  margin-bottom: 20px;
+
+  > a {
+    @extend %roboto_bold;
+    @extend %clarat_rounding_start;
+    @extend %clarat_rounding_end;
+    display: block;
+    min-height: 32px;
+    background: $brand_blue;
+    color: $brand_white;
+    font-size: 18px;
+    padding: 4px 10px;
+  }
+
+  &.active > a {
+    background: $brand_brown;
+  }
+}
+
+// Other
+.Categories .Categories__list .Categories__listitem .Categories__list {
+  margin: 8px 0;
+
+  a {
+    background: transparent;
+    color: $brand_brown;
+    font-weight: 400;
+    font-size: $base_font_size;
+
+  }
+}
+
