--- a/app/views/offers/index/_categories_nest.html.slim
+++ b/app/views/offers/index/_categories_nest.html.slim
@@ -2,13 +2,12 @@
   ul.Categories__list
     - set.each do |category, children|
       - name = category.name
-      - active_class = search_cache.category_in_focus?(name) ? 'active' : ''
-      li.Categories__listitem class=active_class
+      li.Categories__listitem class=category_list_classes(search_cache, name,
+                                                          depth, children)
         = link_to offers_path(search_form: search_cache.focus(name)),
                   class: 'btn' do
           = name
-          / @TODO number output
-          / @TODO "list item has nested list inside" indicator
 
         = render 'offers/index/categories_nest', set: children, facets: facets,
-                                                 search_cache: search_cache
+                                                 search_cache: search_cache,
+                                                 depth: (depth + 1)
