--- a/app/views/offers/index/_categories_sidebar.html.slim
+++ b/app/views/offers/index/_categories_sidebar.html.slim
@@ -2,7 +2,7 @@
   h2.Categories__headline = t 'offers.index.main_categories'
 
   = render 'offers/index/categories_nest', set: category_tree, facets: facets,
-                                           search_cache: search_cache
+                                           search_cache: search_cache, depth: 0
 
 / ALSO REMOVE JS WHEN REMOVING THIS:
 / #categories.aside-standard__container
