--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -48,9 +48,13 @@
             #map-container
               #map-canvas data={markers: @markers.to_json}
 
-        button.offer-contribute
-          i.fa.fa-pencil-square-o
-          = t 'organizations.show.cta_report_errors'
+      = link_to new_contact_path,
+                class: 'offer-contribute js-report-overlay_open' do
+        i.fa.fa-pencil-square-o
+        = t 'shared.show.cta_report_errors'
+
+      = modal_for 'js-report-overlay' do
+        = render '/contacts/shared/new', contact: @contact, reporting: true
 
 - content_for :view_specific_scripts do
   = javascript_include_tag "gmaps_search_results.js"
