--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -39,6 +39,12 @@
   margin-bottom: 80px;
 }
 
+.content-main,
+.Categories {
+  .template--offers-index & {
+    float: right;
+  }
+}
 
 
 // Sticky footer related
