--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -177,6 +177,14 @@
     margin-bottom: 0;
   }
 
+  .content-main,
+  .Categories {
+    .template--offers-index & {
+      float: none;
+      width: 100%;
+    }
+  }
+
 
   // Footer ######################################
 
