Add basic CSS to filter form, add todos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,7 @@
 @import "form/main-search";
 @import "form/newsletter-subscribe";
 @import "form/contact-form";
+@import "form/filter-form";
 
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
