Add privacy statement

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
 @import "modules/listing-organizations";
 @import "modules/map";
 @import "modules/popup-content";
+@import "modules/privacy";
 @import "modules/flash-message";
 @import "modules/banner";
 
