--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -1,6 +1,6 @@
 .Listing-results
   h2.Listing-results__headline
-    == search_results_info_headline @search_cache
+    == search_results_info_headline search_cache
 
   = link_to '#categories', class: 'jump-to-categories' do
     i.fa.fa-filter
