for #137 - responsive category search ajax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
 @import "modules/popup-content";
 @import "modules/flash-message";
 @import "modules/banner";
+@import "modules/ajax";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
