--- a/app/views/offers/index/_search_results.html.slim
+++ b/app/views/offers/index/_search_results.html.slim
@@ -10,3 +10,6 @@
     - offers.each do |offer|
       = render 'offers/index/single_search_result', offer: offer
   = paginate offers
+
+/ prepare ajax spinner
+i.fa.fa-spin.fa-circle-o-notch.Ajax__spinner
