--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -1,1 +1,2 @@
-= render 'offers/index/search_results', offers: @offers
+= render 'offers/index/search_results', offers: @offers,
+                                        search_cache: @search_cache
