--- a/app/views/offers/index_xhr.html.slim
+++ b/app/views/offers/index_xhr.html.slim
@@ -1,2 +1,2 @@
-= render 'offers/index/search_results', offers: @offers,
+= render 'offers/index/search_results', offers: @local_offers,
                                         search_cache: @search_cache
